--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -1,1 +1,53 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Dynamic Quote Generator</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      padding: 20px;
+    }
+    #quoteDisplay {
+      margin: 20px 0;
+      padding: 10px;
+      border-left: 4px solid #3498db;
+      background-color: #f0f8ff;
+    }
+    input, button {
+      margin: 5px;
+      padding: 10px;
+    }
+    select {
+      padding: 5px;
+    }
+  </style>
+</head>
+<body>
+  <h1>Dynamic Quote Generator</h1>
+
+  <!-- Quote Display -->
+  <div id="quoteDisplay">Click the button to display a quote</div>
+  <button id="newQuote">Show New Quote</button>
+
+  <!-- Category Filter -->
+  <div>
+    <label for="categorySelect">Filter by Category:</label>
+    <select id="categorySelect">
+      <option value="all">All</option>
+    </select>
+  </div>
+
+  <!-- Add New Quote Form -->
+  <div>
+    <h3>Add a New Quote</h3>
+    <input id="newQuoteText" type="text" placeholder="Enter a new quote" />
+    <input id="newQuoteCategory" type="text" placeholder="Enter quote category" />
+    <button onclick="addQuote()">Add Quote</button>
+  </div>
+
+  <script src="script.js"></script>
+</body>
+</html>
 
