--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -33,30 +33,31 @@
 <body>
   <h1>Dynamic Quote Generator</h1>
 
-  <!-- Quote Display -->
+  <!-- Quote Display Area -->
   <div id="quoteDisplay"><em>Click "Show New Quote" to begin!</em></div>
 
-  <!-- Controls -->
+  <!-- Quote Controls -->
   <div id="controls">
     <button id="newQuote">Show New Quote</button>
+    <br><br>
 
-    <label for="categorySelect">Filter by Category:</label>
-    <select id="categorySelect">
-      <option value="all">All</option>
+    <!-- Category Filter -->
+    <label for="categoryFilter">Filter by Category:</label>
+    <select id="categoryFilter" onchange="filterQuotes()">
+      <option value="all">All Categories</option>
     </select>
   </div>
 
-  <!-- Form will be dynamically injected -->
+  <!-- Form container will be filled dynamically -->
   <div id="formContainer"></div>
 
-  <!-- JSON Export/Import -->
+  <!-- Export / Import Section -->
   <div id="storageTools" style="margin-top: 30px;">
     <h3>Import / Export Quotes</h3>
     <button id="exportBtn">Export Quotes to JSON</button><br><br>
     <input type="file" id="importFile" accept=".json" />
   </div>
 
-  <!-- Script -->
   <script src="script.js"></script>
 </body>
 </html>
